// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HellButton > recipes > keeps the size and icon-only recipes stable > button sizes 1`] = `
{
  "lg": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-lg",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-6",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-hell-foreground",
    "text-sm",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "lg icon-only": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-lg",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-0",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "shrink-0",
    "text-hell-foreground",
    "text-sm",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-hell-control-lg",
    "whitespace-nowrap",
  ],
  "md": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "md block": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-full",
    "whitespace-nowrap",
  ],
  "md icon-only": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-0",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "shrink-0",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-hell-control-md",
    "whitespace-nowrap",
  ],
  "sm": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-sm",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-4",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "sm icon-only": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-sm",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-0",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "shrink-0",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-hell-control-sm",
    "whitespace-nowrap",
  ],
  "xl": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-xl",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-7",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[15px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "xl icon-only": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-xl",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-0",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "shrink-0",
    "text-[15px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-hell-control-xl",
    "whitespace-nowrap",
  ],
  "xs": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-xs",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-3",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-hell-foreground",
    "text-xs",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "xs icon-only": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-xs",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-0",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "shrink-0",
    "text-hell-foreground",
    "text-xs",
    "transition-[background-color,border-color,color,box-shadow]",
    "w-hell-control-xs",
    "whitespace-nowrap",
  ],
}
`;

exports[`HellButton > recipes > keeps the variant recipes stable > button variants 1`] = `
{
  "danger": [
    "bg-hell-danger",
    "border",
    "border-hell-danger",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-danger-hover",
    "data-press:bg-hell-danger-active",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground-inverse",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "default": [
    "bg-hell-surface-elevated",
    "border",
    "border-hell-border",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "ghost": [
    "bg-transparent",
    "border",
    "border-solid",
    "border-transparent",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-none",
    "text-[13px]",
    "text-hell-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "link": [
    "bg-transparent",
    "border",
    "border-solid",
    "border-transparent",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-transparent",
    "data-press:bg-transparent",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-auto",
    "inline-flex",
    "items-center",
    "justify-center",
    "p-0",
    "rounded-hell-md",
    "select-none",
    "shadow-none",
    "text-[13px]",
    "text-hell-primary",
    "transition-[background-color,border-color,color,box-shadow]",
    "underline",
    "underline-offset-[3px]",
    "whitespace-nowrap",
  ],
  "primary": [
    "bg-hell-primary",
    "border",
    "border-hell-primary",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-primary-hover",
    "data-press:bg-hell-primary-active",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-primary-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "soft": [
    "bg-hell-primary-soft",
    "border",
    "border-solid",
    "border-transparent",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-none",
    "text-[13px]",
    "text-hell-primary-soft-foreground",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "success": [
    "bg-hell-success-strong",
    "border",
    "border-hell-success-strong",
    "border-solid",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-50",
    "data-disabled:saturate-[0.65]",
    "data-disabled:shadow-none",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-success-hover",
    "data-press:bg-hell-success-active",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-[family-name:inherit]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-md",
    "inline-flex",
    "items-center",
    "justify-center",
    "px-hell-5",
    "rounded-hell-md",
    "select-none",
    "shadow-hell-xs",
    "text-[13px]",
    "text-hell-foreground-inverse",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
}
`;
